<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context="com.example.user.medical_projects.Activity_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="59dp"
            android:layout_height="74dp"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/search" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHighlight="@color/background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_question"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="Filter question"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="40dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/right" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_bag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="35dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_bag" />

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/question_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="Big toe and pain or hallux pain"
                        android:textColor="?android:attr/textColorAlertDialogListItem"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/question_hint"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/bag" />

                    <TextView
                        android:id="@+id/views_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/views" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_mouth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="35dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/mouth" />

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/question_name2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/mouth"
                        android:textColor="?android:attr/textColorAlertDialogListItem"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/question_hint2"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/bag" />

                    <TextView
                        android:id="@+id/views2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/views" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_bag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="35dp"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_bag" />

                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/question_name3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/last"
                        android:textColor="?android:attr/textColorAlertDialogListItem"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/question_hint3"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/bag" />

                    <TextView
                        android:id="@+id/views_time3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/views" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/color1"
        android:text="Ask a free question"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />





</LinearLayout>
