<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.medical_projects.Health_packeges">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="59dp"
            android:layout_height="74dp"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/search" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHighlight="@color/background" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/male_1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:text="@string/skincare"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textVew3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="$15\n$15"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:orientation="horizontal"
                        android:paddingTop="1dp">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profilemage"
                            android:layout_width="50dp"
                            android:layout_height="56dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/profile" />

                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drname"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drdetail"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:gravity="right"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"


                                android:gravity="right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageVew2"
                                    android:layout_width="30dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="right"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/heart" />

                                <TextView
                                    android:id="@+id/textVew4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right"
                                    android:text="89%" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="10dp"
                                android:text="37 rating" />
                        </LinearLayout>


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="14 years Exp - Tk.350"
                        android:textAlignment="viewStart"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:gravity="start" />
                </LinearLayout>
            </LinearLayout>







            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/male_1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:text="@string/skincare"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="$15\n$15"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:orientation="horizontal"
                        android:paddingTop="1dp">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="50dp"
                            android:layout_height="56dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/profile" />

                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drname"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drdetail"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:gravity="right"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"


                                android:gravity="right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="30dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="right"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/heart" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right"
                                    android:text="89%" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="10dp"
                                android:text="37 rating" />
                        </LinearLayout>


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="14 years Exp - Tk.350"
                        android:textAlignment="viewStart"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:gravity="start" />
                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/male_1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:text="@string/skincare"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textew3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="$15\n$15"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="87dp"
                        android:orientation="horizontal"
                        android:paddingTop="1dp">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profle_image"
                            android:layout_width="50dp"
                            android:layout_height="56dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/profile" />

                        <LinearLayout
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drname"
                                android:textColor="@android:color/black"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/drdetail"
                                android:textColor="@android:color/black"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:gravity="right"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"


                                android:gravity="right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imgeView2"
                                    android:layout_width="30dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="right"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/heart" />

                                <TextView
                                    android:id="@+id/txtView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="right"
                                    android:text="89%" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:paddingLeft="10dp"
                                android:text="37 rating" />
                        </LinearLayout>


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="14 years Exp - Tk.350"
                        android:textAlignment="viewStart"
                        android:paddingLeft="10dp"
                        android:textSize="12sp"
                        android:gravity="start" />
                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
